- implemented phy layers protocol ids, how and where the id is defined is not final yet, for now its done during decider creation - changed Decider802154Narrow to work with interference defined in frequency domain - changed 802.11 and 802.15.4 NICs in Mixnets hybrid example to interfere with each other

--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -6,7 +6,7 @@ tkenv-plugin-path = ../../../etc/plugins
 *.playgroundSizeX = 600m
 *.playgroundSizeY = 400m
 *.playgroundSizeZ = 0m
-**.coreDebug = false
+**.coreDebug = true
 
 
 
@@ -48,7 +48,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # signal attenuation threshold [dBm]
 **.wlanChannel.sat = -110dBm  # [dBm]
 # path loss coefficient alpha
-**.wlanChannel.alpha = 3
+**.wlanChannel.alpha = 2.5
 **.wlanChannel.sendDirect = false
 
 
@@ -99,7 +99,7 @@ tkenv-plugin-path = ../../../etc/plugins
 ##############################################################################
 #       Parameters for the 802.15.4 ConnectionManager                        #
 ##############################################################################
-**.lrwpan.connectionManagerName = "lrwpanChannel"
+**.lrwpan.connectionManagerName = "wlanChannel"
 
 **.lrwpanChannel.sendDirect = false
 **.lrwpanChannel.pMax = 1.1mW
