- added scenario test cases to nic tests (80211 multi channel)

--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -1,4 +1,6 @@
 [General]
+cmdenv-event-banners = false
+cmdenv-performance-display = false
 ned-path = ../../base/;../../modules/;../../tests/
 network = org.mixim.tests.nicTest.NicTest
 
@@ -6,17 +8,17 @@ network = org.mixim.tests.nicTest.NicTest
 *.playgroundSizeY = 500m
 *.playgroundSizeZ = 500m
 *.numHosts = 4
-*.run = 1
+
 *.showPassed = true
 *.world.coreDebug = false
 *.world.useTorus = false
 *.world.use2D = true
-*.channelcontrol.coreDebug = false
+*.channelcontrol.coreDebug = true
 *.channelcontrol.sendDirect = false
 *.channelcontrol.pMax = 110.11mW
-*.channelcontrol.sat = -120dBm
-*.channelcontrol.alpha = 2.5
-*.channelcontrol.carrierFrequency = 2.4Hz
+*.channelcontrol.sat = -111dBm
+*.channelcontrol.alpha = 3.6
+*.channelcontrol.carrierFrequency = 2.4e9Hz
 
 *.node[*].utility.coreDebug = false
 *.node[*].mobility.coreDebug = false
@@ -36,10 +38,10 @@ network = org.mixim.tests.nicTest.NicTest
 
 
 
-[Config Nic80211Tests]
-description = "Test runs for Nic80211"
+[Config Test1]
+description = "Unit Test runs for Nic80211"
 *.node[*].nicType = "Nic80211MultiChannel"
-
+*.run = 1
 *.node[*].nic.mac.coreDebug = true
 
 *.node[*].nic.phy.coreDebug = true
@@ -47,7 +49,7 @@ description = "Test runs for Nic80211"
 *.node[*].nic.phy.thermalNoise = -110dBm
 *.node[*].nic.phy.useThermalNoise = true
 *.node[*].nic.phy.analogueModels = xmldoc("AnalogueModels.xml")
-*.node[*].nic.phy.maxTXPower = 110.11mW
+*.node[*].nic.phy.maxTXPower = 100mW
 
 *.node[*].nic.sleepCurrent = 3mA
 *.node[*].nic.rxCurrent = 5mA
@@ -58,6 +60,48 @@ description = "Test runs for Nic80211"
 *.node[*].nic.setupRxCurrent = 0mA # no radio switching times
 *.node[*].nic.setupTxCurrent = 0mA # no radio switching times
 
+[Config Nic80211MCSimuTests]
+description = "Simulation test runs for Nic80211MultiChannel"
+extends = Test1
+*.node[0].mobility.x = 50
+*.node[0].mobility.y = 50
+*.node[0].mobility.z = 250
+*.node[1].mobility.x = 250
+*.node[1].mobility.y = 50
+*.node[1].mobility.z = 250
+*.node[2].mobility.x = 250
+*.node[2].mobility.z = 250
+*.node[3].mobility.x = 450
+*.node[3].mobility.z = 250
 
+[Config Test2]
+description = "Simulation test run: two non interfering communicating pairs on same channel"
+extends = Nic80211MCSimuTests
+*.run = 2
+*.node[2].mobility.y = 450
+*.node[3].mobility.y = 450
 
+[Config Test3]
+description = "Simulation test run: two non interfering communicating pairs on different channel"
+extends = Nic80211MCSimuTests
+*.run = 3
+*.node[2].nic.mac.defaultChannel = 2
+*.node[3].nic.mac.defaultChannel = 2
+*.node[2].mobility.y = 450
+*.node[3].mobility.y = 450
 
+[Config Test4]
+description = "Simulation test run: two interfering communicating pairs on same channel"
+extends = Nic80211MCSimuTests
+*.run = 4
+*.node[2].mobility.y = 50
+*.node[3].mobility.y = 50
+
+[Config Test5]
+description = "Simulation test run: two interfering communicating pairs on different channel"
+extends = Nic80211MCSimuTests
+*.run = 5
+*.node[2].nic.mac.defaultChannel = 2
+*.node[3].nic.mac.defaultChannel = 2
+*.node[2].mobility.y = 50
+*.node[3].mobility.y = 50
