--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -87,6 +87,8 @@ extends = Nic80211MCSimuTests
 *.run = 3
 *.node[2].nic.mac.defaultChannel = 2
 *.node[3].nic.mac.defaultChannel = 2
+*.node[2].nic.phy.initialRadioChannel = 2
+*.node[3].nic.phy.initialRadioChannel = 2
 *.node[2].mobility.y = 450
 *.node[3].mobility.y = 450
 
@@ -103,5 +105,7 @@ extends = Nic80211MCSimuTests
 *.run = 5
 *.node[2].nic.mac.defaultChannel = 2
 *.node[3].nic.mac.defaultChannel = 2
+*.node[2].nic.phy.initialRadioChannel = 2
+*.node[3].nic.phy.initialRadioChannel = 2
 *.node[2].mobility.y = 50
 *.node[3].mobility.y = 50
