sync TraCI from INET Framework

--- a/examples/traci_launchd/omnetpp.ini
+++ b/examples/traci_launchd/omnetpp.ini
@@ -1,36 +1,43 @@
 [General]
-debug-on-errors = true
-
-network = scenario
-sim-time-limit = 6000s
-print-undisposed = false
-seed-0-mt = 123
-
 cmdenv-express-mode = true
 cmdenv-autoflush = true
 cmdenv-status-frequency = 10000000s
 
+tkenv-default-config = accident
 #tkenv-default-run = 1
+tkenv-image-path = bitmaps
 
 ned-path = ../../base;../../modules;../../examples;
+network = scenario
 
-tkenv-image-path = bitmaps
+##########################################################
+#			Simulation parameters                        #
+##########################################################
+debug-on-errors = true
+print-undisposed = false
+
+sim-time-limit = 6000s
+
+**.udpapp.*.vector-recording = true
+**.vector-recording = true
+
 **.debug = true
 **.coreDebug = false
 
 *.playgroundSizeX = 10672m
 *.playgroundSizeY = 7105m
 *.playgroundSizeZ = 10000m
+
+
+##########################################################
+#			WorldUtility parameters                      #
+##########################################################
 *.world.useTorus = false
-*.world.use2D = false
+*.world.use2D = true
 
-# Car::TraCIMobility
-*.node[*].mobility.accidentCount = 0
-*.node[*].mobility.accidentStart = -1s
-*.node[*].mobility.accidentDuration = -1s
-*.node[*].mobility.accidentInterval = -1s
-
-# TraCIScenarioManagerLaunchd
+##########################################################
+#			TraCIScenarioManager parameters              #
+##########################################################
 *.manager.updateInterval = 1s
 *.manager.host = "localhost"
 *.manager.port = 9999
@@ -85,32 +92,34 @@ tkenv-image-path = bitmaps
 *.node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ NETW layer parameters ####################
-*.node[*].net.isSwitch = false
-*.node[*].net.maxTtl = 3
-*.node[*].net.boredTime = 0.5
 
-**.udpapp.*.vector-recording = true
-**.vector-recording = true
-
-*.node[*].nic.phy.useThermalNoise = true
-*.node[*].applType = "BurstApplLayer"
-*.node[*].mobType = "TraCIMobility"
-*.node[*].netwType = "BaseNetwLayer"
-*.node[*].appl.debug = false
-*.node[*].appl.headerLength = 512bit
-*.node[*].net.debug = false
-*.node[*].net.stats = false
-*.node[*].net.headerLength = 32bit
-*.node[*].appl.burstSize = 3
-*.node[*].mobility.debug = false
-*.node[*].mobility.speed = 1mps
-*.node[*].mobility.updateInterval = 0.1s
+################ Mobility parameters #####################
 *.node[*].mobility.x = 0
 *.node[*].mobility.y = 0
 *.node[*].mobility.z = 0
+*.node[*].mobility.accidentCount = 0
+*.node[*].mobility.accidentStart = -1s
+*.node[*].mobility.accidentDuration = -1s
+*.node[*].mobility.accidentInterval = -1s
 
-[Config config1]
+
+
+
+*.node[*].applType = "TraCIDemo"
+*.node[*].appl.debug = false
+
+*.node[*].mobType = "TraCIMobility"
+*.node[*].mobility.debug = false
+*.node[*].mobility.speed = 1mps
+*.node[*].mobility.updateInterval = 0.1s
+
+*.node[*].netwType = "BaseNetwLayer"
+*.node[*].net.debug = false
+*.node[*].net.stats = false
+*.node[*].net.headerLength = 32bit
+
+[Config accident]
 *.node[10].mobility.accidentCount = 1
 *.node[10].mobility.accidentStart = 115s
-*.node[10].mobility.accidentDuration = 240s
+*.node[10].mobility.accidentDuration = 30s
 
