use displayString to visualize vehicle heading

--- a/examples/traci_launchd/omnetpp.ini
+++ b/examples/traci_launchd/omnetpp.ini
@@ -43,7 +43,7 @@ sim-time-limit = 6000s
 *.manager.port = 9999
 *.manager.moduleType = "org.mixim.examples.traci_launchd.Car"
 *.manager.moduleName = "node"
-*.manager.moduleDisplayString = "i=misc/node2_vs"
+*.manager.moduleDisplayString = ""
 *.manager.autoShutdown = true
 *.manager.margin = 25
 *.manager.launchConfig = xmldoc("sumo-launchd.launch.xml")
