- introduced "debugEV" which together with a modules "debug" parameter enables per module debugging for end user modules - made usage of coreEV and debugEV more consistent in the way that coreEV is only used for per module debugging of core modules (which are less often used directly by end user)

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -15,6 +15,7 @@ sim-time-limit = 100s
 ##########################################################
 tkenv-default-config = 
 ieee802154Narrow.**.coreDebug = false
+ieee802154Narrow.**.debug = false
 ieee802154Narrow.playgroundSizeX = 100m
 ieee802154Narrow.playgroundSizeY = 100m
 ieee802154Narrow.playgroundSizeZ = 300m
@@ -65,14 +66,12 @@ ieee802154Narrow.node[2].mobility.x = 400
 ieee802154Narrow.node[2].mobility.y = 300
 ieee802154Narrow.node[2].mobility.z = 100
 
-ieee802154Narrow.node[*].appl.debug = false
 ieee802154Narrow.node[*].appl.packetLength = 24880bit
 **.appl.packetTime = 0.1s
 **.appl.packetsPerPacketTime = 0.15
 
 ieee802154Narrow.world.bitrate = 250000
 
-**.battery.debug = false
 **.battery.nominal = 99999mAh
 **.battery.capacity = 99999mAh
 **.battery.voltage = 3.3V
@@ -81,7 +80,6 @@ ieee802154Narrow.world.bitrate = 250000
 **.battery.publishTime = 0
 **.battery.numDevices = 1
 
-**.batteryStats.debug = false
 **.batteryStats.detail = false
 **.batteryStats.timeSeries = false
 
