--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -42,8 +42,8 @@ network = org.mixim.tests.nicTest.NicTest
 description = "Unit Test runs for Nic80211"
 *.node[*].nicType = "Nic80211MultiChannel"
 *.run = 1
-*.node[*].nic.mac.coreDebug = true
-
+*.node[*].nic.mac.debug = true
+*.node[*].nic.mac.coreDebug = false
 *.node[*].nic.phy.coreDebug = true
 *.node[*].nic.phy.usePropagationDelay = false
 *.node[*].nic.phy.thermalNoise = -110dBm
