- changed "runTest*.sh" scripts of ieee802154Narrow example to support parallel execution - added plots zoomed to one packet for channelPlots of ieee802154a example

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -8,6 +8,7 @@ network = CSMAMac
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
+record-eventlog = false
 tkenv-default-config = 
 CSMAMac.**.coreDebug = false
 CSMAMac.playgroundSizeX = 300m
