--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -2,6 +2,7 @@
 network = ieee802154a
 debug-on-errors = false
 fname-append-host = false
+record-eventlog = true
 **.module-eventlog-recording = false
 **.vector-recording = true
 #**.debug = false
