--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -1,7 +1,9 @@
 [General]
 network = Mac80211
 #random-seed = 13
+cmdenv-express-mode = true
 ned-path = ../../base;../../modules;../../examples;
+record-eventlog = false
 sim-time-limit = 5000s
 
 #bitmap-path = "../../bitmaps"
@@ -29,7 +31,8 @@ cmdenv-module-messages = true
 
 # uncomment to enable debug messages for all modules
 # **.debug = 0
-**.coreDebug = true
+**.coreDebug = false
+**.debug = true
 
 
 ##########################################################
@@ -58,7 +61,6 @@ cmdenv-module-messages = true
 ##############################################################################
 
 # debug switch
-**.mobility.debug = false
 
 # if set to 0 the MN does not move
 **.mobility.speed = 0mps
@@ -109,7 +111,6 @@ cmdenv-module-messages = true
 ##############################################################################
 
 # debug switch
-**.appl.debug = false
 **.appl.headerLength = 1024bit
 **.appl.burstSize = 3
 
@@ -117,7 +118,6 @@ cmdenv-module-messages = true
 #       Parameters for the Network Layer                                     #
 ##############################################################################
 **.net.headerLength = 32bit# in bits
-**.net.debug = false
 **.net.stats = false
 
 ##############################################################################
@@ -163,7 +163,6 @@ cmdenv-module-messages = true
 **.phy.timeSleepToTX = 0s
 **.phy.initialRadioState = 0
 
-**.phy.headerLength = 192bit
 **.phy.useThermalNoise = true
 
 
