- changed 802.15.4 and 802.11 nic of hybrid example to not interfere with each other anymore since modelling interprotocoll interference is not supported

--- a/inet/examples/hybrid/omnetpp.ini
+++ b/inet/examples/hybrid/omnetpp.ini
@@ -48,7 +48,7 @@ tkenv-plugin-path = ../../../etc/plugins
 # signal attenuation threshold [dBm]
 **.wlanChannel.sat = -110dBm  # [dBm]
 # path loss coefficient alpha
-**.wlanChannel.alpha = 2.5
+**.wlanChannel.alpha = 3
 **.wlanChannel.sendDirect = false
 
 
@@ -99,7 +99,7 @@ tkenv-plugin-path = ../../../etc/plugins
 ##############################################################################
 #       Parameters for the 802.15.4 ConnectionManager                        #
 ##############################################################################
-**.lrwpan.connectionManagerName = "wlanChannel"
+**.lrwpan.connectionManagerName = "lrwpanChannel"
 
 **.lrwpanChannel.sendDirect = false
 **.lrwpanChannel.pMax = 1.1mW
