- restructured updated and cleaned up basicMiximNetwork template

--- a/templates/baseNetworkWizard/template.properties
+++ b/templates/baseNetworkWizard/template.properties
@@ -4,7 +4,7 @@ templateCategory = MiXiM
 supportedWizardTypes = project, simulation
 
 # template variables
-protocolName = "CSMA"
+protocolName = "CSMA Generic"
 applName = "Burst Application Layer"
 mobilityName = "Static (no mobility)"
 dimensions = "2-dimensional"
