- fixed wrong check of mac queue introduced by the last fix to BMacLayer.cc - changed BMacLayer to use debugEV instead of coreEV - modified configuration of BMacLayer example simulation

--- a/examples/bmac/omnetpp.ini
+++ b/examples/bmac/omnetpp.ini
@@ -5,7 +5,8 @@ network = BMAC
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-**.**.coreDebug = false
+**.coreDebug = false
+**.debug = true
 **.playgroundSizeX = 300m
 **.playgroundSizeY = 300m
 **.playgroundSizeZ = 300m #ignored when use2D
@@ -89,10 +90,13 @@ network = BMAC
 **.node[5].mobility.y = 200
 **.node[5].mobility.z = 10 #ignored when use2D
 
-**.node[*].applType = "BurstApplLayer"
-**.node[*].appl.debug = false
-**.node[*].appl.headerLength = 512bit
-**.node[*].appl.burstSize = 3
+**.node[*].applType = "SensorApplLayer"
+**.appl.trafficType = "periodic"
+**.appl.trafficParam = 10 #in seconds
+**.appl.nbPackets = 10
+**.appl.initializationTime = 10s
+**.appl.destAddr = 4
+**.node[4].appl.broadcastPackets = true
 
 **.node[*].mobType = "BaseMobility"
 **.node[*].mobility.debug = false
