- added option to choose network layer (only BaseNetworkLayer for now)

--- a/templates/baseNetworkWizard/template.properties
+++ b/templates/baseNetworkWizard/template.properties
@@ -7,6 +7,7 @@ supportedWizardTypes = project, simulation
 protocolName = "CSMA Generic"
 applName = "Burst Application Layer"
 mobilityName = "Static (no mobility)"
+netwName = "BaseNetwLayer (No routing)"
 dimensions = "2-dimensional"
 
 # custom wizard pages
