- added battery to bmac example

--- a/examples/bmac/omnetpp.ini
+++ b/examples/bmac/omnetpp.ini
@@ -1,6 +1,7 @@
 [General]
 cmdenv-express-mode = true
 network = BMAC
+sim-time-limit = 150s
 
 ##########################################################
 #			Simulation parameters                        #
@@ -92,7 +93,7 @@ network = BMAC
 
 **.node[*].applType = "SensorApplLayer"
 **.appl.trafficType = "periodic"
-**.appl.trafficParam = 10 #in seconds
+**.appl.trafficParam = ${traffic = 1..19 step 2} #in seconds
 **.appl.nbPackets = 10
 **.appl.initializationTime = 10s
 **.appl.destAddr = 4
@@ -106,3 +107,26 @@ network = BMAC
 **.node[*].net.debug = false
 **.node[*].net.stats = false
 **.node[*].net.headerLength = 32bit
+
+**.batteryStats.detail = true
+**.batteryStats.timeSeries = false
+**.battery.nominal = 1000mAh
+**.battery.capacity = 1000mAh
+**.battery.voltage = 3.3V
+**.battery.resolution = 0.1s
+**.battery.publishDelta = 0
+**.battery.publishTime = 0.5s
+**.battery.numDevices = 1
+
+**.nic.sleepCurrent = 0.02mA
+**.nic.rxCurrent = 16.4mA
+**.nic.decodingCurrentDelta = 0mA
+**.nic.txCurrent = 17mA
+**.nic.setupRxCurrent = 8.2mA
+**.nic.setupTxCurrent = 8.2mA
+**.nic.rxTxCurrent = 17mA
+**.nic.txRxCurrent = 17mA
+
+
+
+
