WSNRouting: added log-normal shadowing to channel model, and set repeat=5 for smoother graphs.

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -3,6 +3,8 @@ network = WSNRouting
 sim-time-limit = ${simDuration=2} min
 ned-path = ../../base;../../modules;../../examples;
 
+repeat = 5
+
 **.coreDebug = false
 **.debug = false
 **.playgroundSizeX = 1000 m
