Updated routing modules (bug fixes and statistic counters), reduced default verbosity of PHY modules, added probabilistic broadcast example configuration.

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -129,6 +129,7 @@ description="Wireless sensor network with the sink flooding the network periodic
 **.node[0].app.nbPackets = 10
 **.node[*].app.nbPackets = 0
 **.node[*].app.destAddr = -1
+**.node[*].app.broadcastPackets = true
 **.node[*].app.trafficType = "periodic"
 **.node[*].app.trafficParameter = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].app.initializationTime = 10 s
@@ -136,11 +137,6 @@ description="Wireless sensor network with the sink flooding the network periodic
 
 [Config probabilisticBcast]
 description="Wireless sensor network using probabilistic broadcast."
-**.node[*].app.broadcastPackets = true
+extends=flooding
 **.node[*].netwType = "AdaptiveProbabilisticBroadcast"
-**.node[*].app.trafficType = "periodic"
-**.node[*].app.trafficParameter = 30 s  # each node sends 1 packet every 30 seconds 
-**.node[*].app.initializationTime = 1 s  # no need for initialization
-**.node[*].app.nbPackets = 100
-**.node[*].app.headerLength = 10 byte
 
