Porting to Microsoft Visual Studio 9.0. Patch provided by Levente Mészáros including some potential bug fixes (replaced 'and' with '&&' and 'or' with '||').

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
 *_m.h
 *_m.cc
+*.pdb
+*.idb
+*.ilk
+*.exe
+*.lib
 .pydevproject
 .settings
 .tstamp
 env.sh
+makefrag.vc
 **/Makefile
+Makefile.vc
+/*/Makefile.vc
+examples/*/Makefile.vc
+tests/*/Makefile.vc
+tests/*/*/Makefile.vc
 out
 doc/doxy
 doc/neddoc
