obstacles: use AnnotationManager

--- a/examples/obstacles/omnetpp.ini
+++ b/examples/obstacles/omnetpp.ini
@@ -30,11 +30,19 @@ Mac80211.numHosts = 10
 # **.debug = 0
 **.coreDebug = true
 
+
+#######
+# Annotation parameters
+#######
+
+*.annotations.draw = true
+
+
 #######
 # Obstacle parameters
 #######
 
-*.obstacles.draw = true
+*.obstacles.debug = true
 *.obstacles.obstacles = xmldoc("test.obstacles.xml")
 
 
