traci: migrate to SUMO 0.13.0

--- a/examples/traci_launchd/sumo.sumo.cfg
+++ b/examples/traci_launchd/sumo.sumo.cfg
@@ -1,14 +1,14 @@
-<configuration>
-	<files>
-		<net-file>net.net.xml</net-file>
-		<route-files>routes.rou.xml</route-files>
+<?xml version="1.0" encoding="iso-8859-1"?>
 
-		<srand>88888</srand>
-		<abs-rand>false</abs-rand>
-	</files>
-	<simulation>
-		<route-steps>200</route-steps>
-		<begin>0</begin>
-		<end>86400</end>
-	</simulation>
+<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/sumoConfiguration.xsd">
+
+    <input>
+        <net-file value="net.net.xml"/>
+        <route-files value="routes.rou.xml"/>
+    </input>
+
+    <time>
+        <begin value="0"/>
+        <end value="86400"/>
+    </time>
 </configuration>
