corrected misspelled usage of trafficParam
Signed-off-by: lindig <lindig@users.sourceforge.net>

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -117,7 +117,7 @@ description="Wireless sensor network with typical convergecast traffic towards o
 **.node[*].app.nbPackets = 10
 **.node[*].app.destAddr = 0
 **.node[*].app.trafficType = "periodic"
-**.node[*].app.trafficParameter = 30 s  # each node sends 1 packet every 30 seconds 
+**.node[*].app.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].app.initializationTime = 30 s
 **.node[*].app.headerLength = 50 byte
 
@@ -131,7 +131,7 @@ description="Wireless sensor network with the sink flooding the network periodic
 **.node[*].app.destAddr = -1
 **.node[*].app.broadcastPackets = true
 **.node[*].app.trafficType = "periodic"
-**.node[*].app.trafficParameter = 30 s  # each node sends 1 packet every 30 seconds 
+**.node[*].app.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].app.initializationTime = 10 s
 **.node[*].app.headerLength = 50 byte
 
