traci: tests: include remaining commands

--- a/tests/traci/sumo.sumo.cfg
+++ b/tests/traci/sumo.sumo.cfg
@@ -2,6 +2,7 @@
 	<files>
 		<net-file>net.net.xml</net-file>
 		<route-files>routes.rou.xml</route-files>
+		<additional-files>polys.poly.xml tls.tls.xml</additional-files>
 	</files>
 	<simulation>
 		<begin>0</begin>
