Moved base and modules directory under src (similar to INET).
This works better with makefile generation. The goal is to have a single
MiXiM dynamic library and one executable for the tests and the examples.
(Taken from Levente MiXiM-INET integration)

--- a/.cproject
+++ b/.cproject
@@ -327,7 +327,7 @@
 			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 			<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 				<buildTargets>
-					<target name="makemake" path="modules/messages" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+					<target name="makemake" path="src/modules/messages" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
 						<buildCommand>make</buildCommand>
 						<buildArguments>MODE=debug CONFIGNAME=${ConfigName}</buildArguments>
 						<buildTarget>makefiles</buildTarget>
@@ -677,7 +677,7 @@
 			<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 			<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 				<buildTargets>
-					<target name="makemake" path="modules/messages" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+					<target name="makemake" path="src/modules/messages" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
 						<buildCommand>make</buildCommand>
 						<buildArguments>MODE=debug CONFIGNAME=${ConfigName}</buildArguments>
 						<buildTarget>makefiles</buildTarget>
