--- a/.gitignore
+++ b/.gitignore
@@ -5,23 +5,21 @@
 *.ilk
 *.exe
 *.lib
+*.dll
 .pydevproject
 .settings
 .tstamp
 env.sh
 makefrag.vc
 **/Makefile
-Makefile.vc
-/*/Makefile.vc
-examples/*/Makefile.vc
-tests/*/Makefile.vc
-tests/*/*/Makefile.vc
+**/.tkenvrc
+**/Makefile.vc
 out
 doc/doxy
 doc/neddoc
 doc/index.html
-base/*.so
-modules/*.so
+src/base/*.so
+src/modules/*.so
 Makefile
 ieee802154a/ieee802154a
 results
