--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -2,7 +2,7 @@
 cmdenv-config-name = perftest
 cmdenv-express-mode = true
 cmdenv-status-frequency = 0.5s
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;../../examples;
 network = AnalogueModels
 
 
