--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -7,7 +7,7 @@ record-eventlog = true
 **.vector-recording = true
 #**.debug = false
 num-rngs = 88
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;../../examples;
 
 # tkenv-default-run=1
 
