--- a/tests/connectionManager/omnetpp.ini
+++ b/tests/connectionManager/omnetpp.ini
@@ -1,7 +1,7 @@
 
 
 [General]
-ned-path = ../../base/;../../modules/;../../tests/
+ned-path = ../../src/;../../tests/
 
 cmdenv-express-mode = true
 network = ccSim
