--- a/tests/power/deviceTest/omnetpp.ini
+++ b/tests/power/deviceTest/omnetpp.ini
@@ -3,7 +3,7 @@ network = sim
 cmdenv-event-banner-details = false
 cmdenv-express-mode = true
 cmdenv-message-trace = true
-ned-path = ../../../base/;../../../modules;../../../tests;
+ned-path = ../../../src;../../../tests;
 
 
 # cmdenv-runs-to-execute = 1
