--- a/tests/power/deviceTestAll/omnetpp.ini
+++ b/tests/power/deviceTestAll/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = sim
-ned-path = ../../../base/;../../../modules;../../../tests;
+ned-path = ../../../src;../../../tests;
 sim-time-limit = 10s
 
 # cmdenv-runs-to-execute = 1
