--- a/tests/baseMobility/omnetpp.ini
+++ b/tests/baseMobility/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-ned-path = ../../base/;../../modules;../../tests;
+ned-path = ../../src;../../tests;
 
 network = bmSim
 sim-time-limit = 50s
