--- a/tests/blackboard/omnetpp.ini
+++ b/tests/blackboard/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-ned-path = ../../base/;../../modules/;../../tests/
+ned-path = ../../src/;../../tests/
 
 network = sim
 #sim-time-limit = 50s
