--- a/tests/power/Nic80211Test/omnetpp.ini
+++ b/tests/power/Nic80211Test/omnetpp.ini
@@ -2,7 +2,7 @@
 network = sim
 cmdenv-event-banner-details = false
 cmdenv-message-trace = true
-ned-path = ../../../base/;../../../modules;../../../tests;
+ned-path = ../../../src;../../../tests;
 seed-0-mt = 897054849
 sim-time-limit = 500s
 
