--- a/tests/power/deviceTestMulti/omnetpp.ini
+++ b/tests/power/deviceTestMulti/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = sim
-ned-path = ../../../base/;../../../modules;../../../tests;
+ned-path = ../../../src;../../../tests;
 
 # cmdenv-runs-to-execute = 1
 cmdenv-event-banners = false
