--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -2,7 +2,7 @@
 network = Mac80211
 #random-seed = 13
 cmdenv-express-mode = true
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;..
 record-eventlog = false
 sim-time-limit = 5000s
 
