--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 network = WSNRouting
 sim-time-limit = ${simDuration=2} min
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;..
 
 repeat = 5
 
