--- a/examples/baseNetwork/omnetpp.ini
+++ b/examples/baseNetwork/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 cmdenv-config-name = perftest
 cmdenv-express-mode = true
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;..
 network = BaseNetwork
 
 
