--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -4,7 +4,7 @@ cmdenv-event-banners = true
 cmdenv-module-messages = true
 
 cmdenv-runs-to-execute = 
-ned-path = ../../src;../../examples;
+ned-path = ../../src;..
 network = ieee802154Narrow
 
 sim-time-limit = 100s
