--- a/examples/lmac/omnetpp.ini
+++ b/examples/lmac/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 cmdenv-express-mode = true
-ned-path = ../../base;../../modules;../../examples;
+ned-path = ../../src;..
 network = LMAC
 sim-time-limit = 150s
 
