--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 cmdenv-config-name = perftest
 cmdenv-express-mode = true
-ned-path = ../../src;../../examples;
+ned-path = ../../src;..
 network = CSMAMac
 
 
