--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 cmdenv-event-banners = false
 cmdenv-performance-display = false
-ned-path = ../../src/;../../tests/
+ned-path = ../../src;..
 network = org.mixim.tests.nicTest.NicTest
 
 *.playgroundSizeX = 500m
