Changed the names of time parameters in Signal to better express their intent. (suggested by Levente)
Having a signalStart member and a getSignalStart function that does return
something else makes understanding code quite difficult.

Renamed signalStart to sendingStart, signalLength to Duration,
propDelay to propagationDelay. Added sendingEnd, receptionStart and
receptionEnd.

--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -6,6 +6,7 @@ network = tbpSim
 cmdenv-express-mode = false
 
 tbpSim.node[*].nic.phy.thermalNoise = 1dBm
+tbpSim.node[*].nic.phy.useThermalNoise = true
 tbpSim.**.coreDebug = false
 tbpSim.world.coreDebug = false
 tbpSim.world.useTorus = false
