Renamed upperGateIn/lowerGateIn to upperLayerIn/lowerLayerIn and upperGateOut/lowerGateOut to upperLayerOut/lowerLayerOut.
Renamed INic to IWirelessNic. Allow the upperControlOut and the lowerControlOut gates to be unconnected.

The IWirelessNic moduleinterface in INET does not have control gates. Drop the control messages that were sent through these gates if unconnected.

All this is necessary to be able to interoperate with INET. (Levente)

Fixed erasing of elements in Decider80211MultiChannel.cc.

--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -1,8 +1,9 @@
 [General]
-cmdenv-config-name = Test3
+ned-path = ../../src;..
+user-interface = Cmdenv
+cmdenv-express-mode = false
 cmdenv-event-banners = false
 cmdenv-performance-display = false
-ned-path = ../../src;..
 network = org.mixim.tests.nicTest.NicTest
 
 *.playgroundSizeX = 500m
@@ -36,8 +37,6 @@ network = org.mixim.tests.nicTest.NicTest
 *.node[3].mobility.y = 300
 *.node[3].mobility.z = 250
 *.node[*].arpHost.coreDebug = false
-
-
 
 [Config Test1]
 description = "Unit Test runs for Nic80211"
