--- a/tests/power/deviceTest/omnetpp.ini
+++ b/tests/power/deviceTest/omnetpp.ini
@@ -1,9 +1,10 @@
 [General]
+ned-path = ../../../src;../..
+user-interface = Cmdenv
 network = sim
 cmdenv-event-banner-details = false
 cmdenv-express-mode = true
 cmdenv-message-trace = true
-ned-path = ../../../src;../..
 
 
 # cmdenv-runs-to-execute = 1
