--- a/tests/power/deviceTestAll/omnetpp.ini
+++ b/tests/power/deviceTestAll/omnetpp.ini
@@ -1,6 +1,7 @@
 [General]
-network = sim
 ned-path = ../../../src;../..
+user-interface = Cmdenv
+network = sim
 sim-time-limit = 10s
 
 # cmdenv-runs-to-execute = 1
