--- a/tests/power/deviceTestMulti/omnetpp.ini
+++ b/tests/power/deviceTestMulti/omnetpp.ini
@@ -1,6 +1,7 @@
 [General]
-network = sim
 ned-path = ../../../src;../..
+user-interface = Cmdenv
+network = sim
 
 # cmdenv-runs-to-execute = 1
 cmdenv-event-banners = false
