--- a/tests/connectionManager/omnetpp.ini
+++ b/tests/connectionManager/omnetpp.ini
@@ -1,11 +1,8 @@
-
-
 [General]
-cmdenv-config-name = Test2
 ned-path = ../../src;..
-
-cmdenv-express-mode = true
+user-interface = Cmdenv
 network = ccSim
+cmdenv-express-mode = true
 sim-time-limit = 50s
 
 
