--- a/.cproject
+++ b/.cproject
@@ -51,7 +51,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+<entry excluding="templates|out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
@@ -358,6 +358,10 @@
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="org.omnetpp.cdt.gnu.config.release.233601168" moduleId="org.eclipse.cdt.core.settings" name="gcc-release">
 <macros>
 <stringMacro name="MIXIMBASE" type="VALUE_TEXT" value="."/>
+<stringListMacro name="RELCFLAGS" type="VALUE_TEXT_LIST">
+<value name="-march=core2"/>
+<value name="-ftree-vectorize"/>
+</stringListMacro>
 </macros>
 <externalSettings/>
 <extensions>
@@ -401,7 +405,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="out/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+<entry excluding="templates|out" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
