Make test runs explicit

--- a/tests/traci/omnetpp.ini
+++ b/tests/traci/omnetpp.ini
@@ -104,7 +104,7 @@ sim-time-limit = 6000s
 
 *.node[*].applType = "org.mixim.tests.traci.TraCITestApp"
 *.node[*].appl.debug = false
-*.node[0].appl.testNumber = ${runnumber}
+*.node[0].appl.testNumber = ${0..9}
 *.node[*].appl.testNumber = -1
 
 *.node[*].mobType = "TraCIMobility"
@@ -116,5 +116,3 @@ sim-time-limit = 6000s
 *.node[*].net.debug = false
 *.node[*].net.stats = false
 *.node[*].net.headerLength = 32bit
-
-repeat = 10
